fix: added variables

--- a/blocks/about/about.scss
+++ b/blocks/about/about.scss
@@ -1,7 +1,7 @@
 .about {
   margin: 0 0 80px;
 
-  @media screen and (max-width: 767px) {
+  @media screen and (max-width: $tablet-width) {
     margin: 0 0 40px;
     max-width: 100%;
   }
@@ -11,7 +11,7 @@
     flex-direction: row;
     justify-content: space-between;
 
-    @media screen and (max-width: 767px) {
+    @media screen and (max-width: $tablet-width) {
       flex-direction: column;
       max-width: 485px;
       margin: 0 auto;
@@ -23,16 +23,16 @@
     margin: 0;
     @include font-large-desctop();
 
-    @media screen and (max-width: 1023px) {
+    @media screen and (max-width: $tablet-large-width) {
       max-width: 364px;
       @include font-large-tablet();
     }
 
-    @media screen and (max-width: 767px) {
+    @media screen and (max-width: $tablet-width) {
       margin-bottom: 20px;
     }
 
-    @media screen and (max-width: 425px) {
+    @media screen and (max-width: $mobile-width) {
       max-width: 280px;
       @include font-large-mobile();
     }
@@ -43,11 +43,11 @@
     margin: 0;
     @include font-base();
 
-    @media screen and (max-width: 1023px) {
+    @media screen and (max-width: $tablet-large-width) {
       max-width: 364px;
     }
 
-    @media screen and (max-width: 425px) {
+    @media screen and (max-width: $mobile-width) {
       max-width: 280px;
       @include font-small();
     }
@@ -58,11 +58,11 @@
     justify-content: space-between;
     margin: 80px 0 0;
 
-    @media screen and (max-width: 1023px) {
+    @media screen and (max-width: $tablet-large-width) {
       margin: 70px 0 0;
     }
 
-    @media screen and (max-width: 767px) {
+    @media screen and (max-width: $tablet-width) {
       flex-direction: column;
       margin: 0;
     }
@@ -75,16 +75,16 @@
     align-self: center;
     margin: 0 -175px 0 0;
 
-    @media screen and (max-width: 1023px) {
+    @media screen and (max-width: $tablet-large-width) {
       max-width: 364px;
     }
 
-    @media screen and (max-width: 767px) {
+    @media screen and (max-width: $tablet-width) {
       margin: 0;
       order: 2;
     }
 
-    @media screen and (max-width: 425px) {
+    @media screen and (max-width: $mobile-width) {
       @include font-medium-mobile();
     }
   }
@@ -96,7 +96,7 @@
   &__quote-author {
     margin: 24px 0 0;
 
-    @media screen and (max-width: 767px) {
+    @media screen and (max-width: $tablet-width) {
       margin: 20px 0 0;
     }
   }
@@ -104,12 +104,12 @@
   &__image {
     max-width: 875px;
 
-    @media screen and (max-width: 1023px) {
+    @media screen and (max-width: $tablet-large-width) {
       max-width: 485px;
       margin: 50px 0;
     }
 
-    @media screen and (max-width: 767px) {
+    @media screen and (max-width: $tablet-width) {
       margin: 40px auto 20px;
       order: 1;
     }
@@ -119,18 +119,18 @@
       margin-left: 0;
       z-index: 1;
 
-      @media screen and (max-width: 1023px) {
+      @media screen and (max-width: $tablet-large-width) {
         margin-right: 121px;
         height: 452px;
       }
 
-      @media screen and (max-width: 767px) {
+      @media screen and (max-width: $tablet-width) {
         width: 100%;
         height: 100%;
         margin: 40px auto 20px;
       }
 
-      @media screen and (max-width: 425px) {
+      @media screen and (max-width: $mobile-width) {
         width: 280px;
         height: 348px;
       }
@@ -139,12 +139,12 @@
     &_type_large {
       margin: 0;
 
-      @media screen and (max-width: 1023px) {
+      @media screen and (max-width: $tablet-large-width) {
         &_type_large {
           width: 485px;
         }
 
-        @media screen and (max-width: 767px) {
+        @media screen and (max-width: $tablet-width) {
           margin: 40px auto 20px;
           width: 100%;
         }
@@ -155,13 +155,13 @@
       width: 100%;
       order: 1;
 
-      @media screen and (max-width: 1023px) {
+      @media screen and (max-width: $tablet-large-width) {
         width: 304px;
         height: 100%;
         margin-top: 40px;
       }
 
-      @media screen and (max-width: 767px) {
+      @media screen and (max-width: $tablet-width) {
         margin: 40px auto 20px;
         width: 100%;
       }
@@ -176,12 +176,12 @@
     @include font-base();
     order: 2;
 
-    @media screen and (max-width: 1023px) {
+    @media screen and (max-width: $tablet-large-width) {
       max-width: 373px;
       margin: 0 -9px 50px 60px;
     }
 
-    @media screen and (max-width: 425px) {
+    @media screen and (max-width: $mobile-width) {
       margin: 0;
       @include font-small();
     }
