--- a/blocks/cards/cards.scss
+++ b/blocks/cards/cards.scss
@@ -6,11 +6,11 @@
     margin: 0 auto;
     @include font-large-desctop();
 
-    @media screen and (max-width: 1023px) {
+    @media screen and (max-width: $tablet-large-width) {
       @include font-large-tablet();
     }
 
-    @media screen and (max-width: 425px) {
+    @media screen and (max-width: $mobile-width) {
       @include font-large-mobile();
     }
   }
@@ -26,16 +26,16 @@
     grid-auto-rows: 1fr;
     overflow-y: hidden;
 
-    @media screen and (max-width: 1023px) {
+    @media screen and (max-width: $tablet-large-width) {
       grid-template-columns: repeat(3, fit-content(350px));
     }
 
-    @media screen and (max-width: 767px) {
+    @media screen and (max-width: $tablet-width) {
       grid-template-columns: repeat(2, fit-content(350px));
       grid-template-rows: repeat(4, 1fr);
     }
 
-    @media screen and (max-width: 425px) {
+    @media screen and (max-width: $mobile-width) {
       margin: 20px auto 0;
     }
   }
@@ -46,21 +46,21 @@
     align-self: center;
 
     &:nth-child(7) {
-      @media screen and (max-width: 1023px) {
+      @media screen and (max-width: $tablet-large-width) {
         display: none;
       }
 
-      @media screen and (max-width: 767px) {
+      @media screen and (max-width: $tablet-width) {
         display: block;
       }
     }
 
     &:nth-child(8) {
-      @media screen and (max-width: 1023px) {
+      @media screen and (max-width: $tablet-large-width) {
         display: none;
       }
 
-      @media screen and (max-width: 767px) {
+      @media screen and (max-width: $tablet-width) {
         display: block;
       }
     }
