--- a/blocks/variables.scss
+++ b/blocks/variables.scss
@@ -1,2 +1,12 @@
-$color-base: #0A0A0A;
-$bg-color-base: #ffffff;
+$color-dark: #0A0A0A;
+$color-white: #ffffff;
+$color-grey: #666666;
+
+$bg-color-white: #ffffff;
+$bg-color-dark: #0A0A0A;
+$bg-color-header: #E7E7E2;
+$bg-color-menu: #000000;
+
+$tablet-large-width: 1023px;
+$tablet-width: 767px;
+$mobile-width: 425px;
