--- a/blocks/main/main.scss
+++ b/blocks/main/main.scss
@@ -4,12 +4,12 @@
   padding: 80px 20px;
   box-sizing: border-box;
 
-  @media screen and (max-width: 1023px) {
+  @media screen and (max-width: $tablet-large-width) {
     max-width: 768px;
     padding: 60px 20px;
   }
 
-  @media screen and (max-width: 767px) {
+  @media screen and (max-width: $tablet-width) {
     min-width: 320px;
     padding: 40px 20px;
   }
